--- a/TP Final/styles.css
+++ b/TP Final/styles.css
@@ -4,11 +4,6 @@ body {
   font-weight: bold;
   text-shadow: 4px 4px 4px gray;
 }
-#titulo {
-  padding-top: 5px;
-  padding-bottom: 10px;
-  color: #ffffff;
-}
 #marco {
   background-image: url("imagenes/fondo.jpg");
   width: 380px;
@@ -20,6 +15,11 @@ body {
   text-align: center;
   display: flexbox;
   justify-content: center;
+}
+#titulo {
+  padding-top: 5px;
+  padding-bottom: 10px;
+  color: #ffffff;
 }
 #turnero {
   margin-left: 10px;
@@ -41,10 +41,16 @@ body {
   height: 50px;
 }
 .flecha {
-  background-image: url("imagenes/flecha.png");
-  width: 50px;
-  height: 20px;
-  margin-bottom: 10px;
+  align-items: center;
+    width: 0px;
+    height: 0px;
+    border-left: 22px solid transparent;
+    border-right: 22px solid transparent;
+    border-top: 20px solid #26BFBC;
+    margin-bottom: 10px;
+  }
+.flecha:active {
+  border-top: 20px solid #1B8381
 }
 .fichaAzul {
   background-image: url("imagenes/fichaAzul.png");
